# Major-Project---Heart-Disease-Prediction-System-using-Machine-Learning

./: .replit  Pasted-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-connection-to-server-at-ep-jolly-sky-a-1747978053448.txt  admin_panel.py  app.py  auth_components.py  cardiopredict.db  config.toml  data_processor.py  database.py  database_fallback.py  doctor_advice.py  heart_disease_model.pkl  layout.py  log.txt  model.py  mysql_database.py  pages.py  pyproject.toml  run_app.py  run_cardiopredict.bat  run_cardiopredict.sh  session_state.py  sqlite_database.py  user_profile.py  utils.py
Scripts/: activate  activate.bat  activate.fish
data/: heart.csv
static/css/: custom.css
