[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit-extras>=0.7.1",
    "streamlit>=1.45.0",
    "bcrypt>=4.3.0",
    "streamlit-option-menu>=0.4.0",
    "cryptography>=44.0.3",
    "mysql-connector-python>=9.3.0",
    "pymysql>=1.1.1",
]
